// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LocationTypeForm test /> Add mode should match the snapshot at add mode: add mode 1`] = `
<DocumentFragment>
  <div>
    <div
      class="wrapper"
    >
      <div
        class="pageTitle"
      >
        Новый тип локации
      </div>
      <form
        class="ant-form ant-form-vertical formStyles"
        id="location-type"
      >
        <div
          class="formWrapper"
        >
          <div
            class="ant-row"
            style="margin: -2.5px -12px -2.5px -12px;"
          >
            <div
              class="ant-col ant-col-12"
              style="padding: 2.5px 12px 2.5px 12px;"
            >
              <div
                class="ant-row ant-form-item"
              >
                <div
                  class="ant-col ant-form-item-label"
                >
                  <label
                    class="ant-form-item-required"
                    for="name"
                    title="Название типа локации"
                  >
                    Название типа локации
                  </label>
                </div>
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <span
                        class="ant-input-affix-wrapper"
                      >
                        <input
                          class="ant-input"
                          id="name"
                          maxlength="50"
                          placeholder="Название"
                          type="text"
                          value=""
                        />
                        <span
                          class="ant-input-suffix"
                        >
                          <span
                            aria-label="close-circle"
                            class="anticon anticon-close-circle ant-input-clear-icon-hidden ant-input-clear-icon"
                            role="button"
                            tabindex="-1"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="close-circle"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                              />
                            </svg>
                          </span>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-12"
              style="padding: 2.5px 12px 2.5px 12px;"
            >
              <div
                class="ant-row ant-form-item"
              >
                <div
                  class="ant-col ant-form-item-label"
                >
                  <label
                    class="ant-form-item-required"
                    for="priority"
                    title="Приоритет типа локации"
                  >
                    Приоритет типа локации
                  </label>
                </div>
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <span
                        class="ant-input-affix-wrapper"
                      >
                        <input
                          class="ant-input"
                          id="priority"
                          maxlength="3"
                          placeholder="Приоритет"
                          type="text"
                          value=""
                        />
                        <span
                          class="ant-input-suffix"
                        >
                          <span
                            aria-label="close-circle"
                            class="anticon anticon-close-circle ant-input-clear-icon-hidden ant-input-clear-icon"
                            role="button"
                            tabindex="-1"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="close-circle"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                              />
                            </svg>
                          </span>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-12"
              style="padding: 2.5px 12px 2.5px 12px;"
            >
              <div
                class="ant-row ant-form-item"
              >
                <div
                  class="ant-col ant-form-item-label"
                >
                  <label
                    class=""
                    for="description"
                    title="Описание типа локации"
                  >
                    Описание типа локации
                  </label>
                </div>
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <textarea
                        class="ant-input"
                        id="description"
                        placeholder="Описание"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
      <div
        class="buttonsContainer"
      >
        <button
          class="ant-btn"
          type="button"
        >
          <span>
            Отменить
          </span>
        </button>
        <button
          class="ant-btn ant-btn-primary"
          form="location-type"
          type="submit"
        >
          <span>
            Добавить
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<LocationTypeForm test /> Edit mode should match the snapshot at edit mode: edit mode 1`] = `
<DocumentFragment>
  <div>
    <div
      class="wrapper"
    >
      <div
        class="pageTitle"
      >
        Тип локации Город
      </div>
      <form
        class="ant-form ant-form-vertical formStyles"
        id="location-type"
      >
        <div
          class="formWrapper"
        >
          <div
            class="ant-row"
            style="margin: -2.5px -12px -2.5px -12px;"
          >
            <div
              class="ant-col ant-col-12"
              style="padding: 2.5px 12px 2.5px 12px;"
            >
              <div
                class="ant-row ant-form-item ant-form-item-has-success"
              >
                <div
                  class="ant-col ant-form-item-label"
                >
                  <label
                    class="ant-form-item-required"
                    for="name"
                    title="Название типа локации"
                  >
                    Название типа локации
                  </label>
                </div>
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <span
                        class="ant-input-affix-wrapper"
                      >
                        <input
                          class="ant-input"
                          id="name"
                          maxlength="50"
                          placeholder="Название"
                          type="text"
                          value="Город"
                        />
                        <span
                          class="ant-input-suffix"
                        >
                          <span
                            aria-label="close-circle"
                            class="anticon anticon-close-circle ant-input-clear-icon"
                            role="button"
                            tabindex="-1"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="close-circle"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                              />
                            </svg>
                          </span>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-12"
              style="padding: 2.5px 12px 2.5px 12px;"
            >
              <div
                class="ant-row ant-form-item ant-form-item-has-success"
              >
                <div
                  class="ant-col ant-form-item-label"
                >
                  <label
                    class="ant-form-item-required"
                    for="priority"
                    title="Приоритет типа локации"
                  >
                    Приоритет типа локации
                  </label>
                </div>
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <span
                        class="ant-input-affix-wrapper"
                      >
                        <input
                          class="ant-input"
                          id="priority"
                          maxlength="3"
                          placeholder="Приоритет"
                          type="text"
                          value="6"
                        />
                        <span
                          class="ant-input-suffix"
                        >
                          <span
                            aria-label="close-circle"
                            class="anticon anticon-close-circle ant-input-clear-icon"
                            role="button"
                            tabindex="-1"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="close-circle"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                              />
                            </svg>
                          </span>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-12"
              style="padding: 2.5px 12px 2.5px 12px;"
            >
              <div
                class="ant-row ant-form-item ant-form-item-has-success"
              >
                <div
                  class="ant-col ant-form-item-label"
                >
                  <label
                    class=""
                    for="description"
                    title="Описание типа локации"
                  >
                    Описание типа локации
                  </label>
                </div>
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <textarea
                        class="ant-input"
                        id="description"
                        placeholder="Описание"
                      >
                        Описание
                      </textarea>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
      <div
        class="buttonsContainer"
      >
        <button
          class="ant-btn ant-btn-primary"
          form="location-type"
          type="submit"
        >
          <span>
            Сохранить
          </span>
        </button>
        <button
          class="ant-btn"
          type="button"
        >
          <span>
            Отменить
          </span>
        </button>
        <button
          class="ant-btn ant-btn-primary ant-btn-dangerous"
          type="button"
        >
          <span>
            Удалить
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
